--- a/package.json
+++ b/package.json
@@ -4,29 +4,38 @@
   "private": true,
   "scripts": {
     "start": "node bin/www",
-    "dev": "cross-env NODE_ENV=dev ./node_modules/.bin/nodemon bin/www",
+    "dev": "cross-env NODE_ENV=dev ./node_modules/.bin/nodemon --inspect=9229 bin/www",
     "prd": "cross-env NODE_ENV=production pm2 start bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test jest --runInBand --forceExit --colors"
   },
   "dependencies": {
     "debug": "^4.1.1",
     "ejs": "~2.3.3",
+    "formidable-upload-koa": "^1.0.1",
+    "fs-extra": "^9.0.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
     "koa-cors": "0.0.16",
+    "koa-generic-session": "^2.0.4",
     "koa-json": "^2.0.2",
+    "koa-jwt": "^3.6.0",
     "koa-logger": "^3.2.0",
     "koa-onerror": "^4.1.0",
+    "koa-redis": "^4.0.1",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
     "mysql2": "^2.1.0",
+    "redis": "^3.0.2",
     "sequelize": "^5.21.5"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.0",
-    "nodemon": "^1.19.1"
+    "jest": "^25.1.0",
+    "nodemon": "^1.19.1",
+    "supertest": "^4.0.2"
   }
 }
