--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "cross-env NODE_ENV=test jest --runInBand --forceExit --colors"
   },
   "dependencies": {
+    "date-fn": "0.0.2",
+    "date-fns": "^2.12.0",
     "debug": "^4.1.1",
     "ejs": "~2.3.3",
     "formidable-upload-koa": "^1.0.1",
@@ -29,7 +31,8 @@
     "koa-views": "^6.2.0",
     "mysql2": "^2.1.0",
     "redis": "^3.0.2",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.5",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
